[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
authors = ["DataDog, Inc. <support@datadoghq.com>"]
version = "2.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/DataDog/libddwaf-rust"
categories = ["api-bindings", "security"]
keywords = ["datadog", "security", "waf", "rasp"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage, coverage_nightly)'] }
