[package]
name = "libddwaf-sys"
description = "Low-level bindings to DataDog/libddwaf"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

links = "ddwaf"

[dependencies]
lazy_static = { version = "1.5", optional = true }
libc = "0.2"
libloading = { version = "0.8", optional = true }
tempfile = { version = "3", optional = true }
tracing = { version = "0.1", optional = true }

[build-dependencies]
bindgen = "0.72"
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "rustls-tls-native-roots-no-provider"] }
tar = "0.4"
# Following is to ensure FIPS compliance is possible.
hyper-rustls = { version = "*", default-features = false, features = ["aws-lc-rs"] }
rustls = { version = "*", default-features = false, features= ["aws-lc-rs"] }

[features]
default = []
fips = ["hyper-rustls/fips", "rustls/fips"]
dynamic = ["lazy_static", "libloading", "tempfile", "tracing"]

[lints]
workspace = true
