[package]
name = "libddwaf-sys"
description = "Low-level bindings to DataDog/libddwaf"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

links = "ddwaf"

[dependencies]
lazy_static = { version = "1.5", optional = true }
libc = "0.2"
libloading = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
tracing = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[build-dependencies]
bindgen = "0.72"
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "rustls-tls-native-roots-no-provider"] }
tar = "0.4"
# Following is to ensure FIPS compliance is possible.
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs"] }
rustls = { version = "0.23", default-features = false, features= ["aws-lc-rs"] }
zstd = "0.13"

[features]
default = []
fips = ["hyper-rustls/fips", "rustls/fips"]
# Embeds a compressed libddwaf.so and extracts it to a temporary file at runtime, then loads it with libloading/dlopen
dynamic = ["lazy_static", "libloading", "tempfile", "tracing", "zstd"]
# Links to libddwaf.so dynamically via the system dynamic linker and rpath (simpler, requires library at runtime)
dynamic-link = []
link-stdcxx = []

[lints]
workspace = true
