[package]
name = "libddwaf"
description = "Rust bindings to DataDog/libddwaf"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libddwaf-sys = { path = "../libddwaf-sys", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde", "static"]
fips = ["libddwaf-sys/fips"]
serde = ["dep:serde"]
static = ["libddwaf-sys/static"]

[lints]
workspace = true
