[package]
name = "libddwaf"
description = "Rust bindings to DataDog/libddwaf"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libddwaf-sys = { version = "1.26.0", path = "../libddwaf-sys", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde"]
fips = ["libddwaf-sys/fips"]
serde = ["dep:serde"]
dynamic = ["libddwaf-sys/dynamic"]

[lints]
workspace = true
