[package]
name = "libddwaf"
description = "Rust bindings to DataDog/libddwaf"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libddwaf-sys = { version = "2.0.1", path = "../libddwaf-sys", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde"]
fips = ["libddwaf-sys/fips"]
serde = ["dep:serde"]
# Embeds libddwaf and loads it with dlopen at runtime (no external library needed)
dynamic = ["libddwaf-sys/dynamic"]
# Links to libddwaf dynamically via system linker (requires libddwaf.so at runtime)
dynamic-link = ["libddwaf-sys/dynamic-link"]
# Link against libstdc++
link-stdcxx = ["libddwaf-sys/link-stdcxx"]

[lints]
workspace = true
